@@ -1,5 +1,7 @@
 Version ???
    * Removed debugging warning in get_feature_by_id().
+   * Identify version-specific samtools installs where the prefix is xyz and the
+     include/lib files are in xyz/include and xyz/lib (Contributed by John Marshall).
 
 Version 1.24
    * More revisions needed to run tests succssfully. Sorry!
